deploy: b78eb40c81708d4461a6a0f78dac3b0456261054

--- a/_notebooks/arellano.ipynb
+++ b/_notebooks/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d41ef318",
+   "id": "6f86e57a",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09db7f0b",
+   "id": "ba16efdb",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0280c3a1",
+   "id": "870e4b9a",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2bec4fb",
+   "id": "e9ddb6b3",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "819996c0",
+   "id": "2540219d",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03e41aab",
+   "id": "d2f7b556",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a7df3d7",
+   "id": "4f89c0af",
    "metadata": {
     "hide-output": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f9e1404",
+   "id": "6bbccf6a",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebedd9e6",
+   "id": "17a5daa5",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c6eed78",
+   "id": "950d569e",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "995c5310",
+   "id": "d9241f72",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e4e09fe",
+   "id": "41393611",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee57f3a",
+   "id": "8dd18da9",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cc8da4f",
+   "id": "99210570",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3371f148",
+   "id": "934cee9d",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e79b5ac6",
+   "id": "87ad1e3e",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f7e398",
+   "id": "2894044a",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f5d63c",
+   "id": "c4cef316",
    "metadata": {},
    "source": [
     "Notice how the class returns the data it stores as simple numerical values and\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16cd1639",
+   "id": "63d3a4d1",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4bbba2",
+   "id": "a5bc0d88",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -535,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad540f53",
+   "id": "899e0c0c",
    "metadata": {
     "hide-output": false
    },
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "946ef1c3",
+   "id": "e3321354",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f015406",
+   "id": "8e9c36bf",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2579eac2",
+   "id": "5d2161ab",
    "metadata": {},
    "source": [
     "Here is a fast function that calls these operators in the right sequence."
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed7ebc9",
+   "id": "197790f6",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36ffccda",
+   "id": "52709c8b",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d30ccfb",
+   "id": "3ffd2dfd",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09365405",
+   "id": "686e19cb",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6be4f52",
+   "id": "7a9da8ef",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daaa25e0",
+   "id": "88c4c699",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaaa716f",
+   "id": "368658e7",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "717fc654",
+   "id": "79f16ef2",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f1b70d",
+   "id": "6ca1bce2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://eqm.quantecon.org/#arella_ex1)\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c18e14f4",
+   "id": "2f78b894",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ca0844",
+   "id": "3c9c46cb",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "856d9282",
+   "id": "33b40f2c",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f1946c9",
+   "id": "c3a77625",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e03c75a",
+   "id": "79d71845",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0601a705",
+   "id": "dbbd6377",
    "metadata": {
     "hide-output": false
    },
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae3d29e",
+   "id": "55755a56",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b0eb18a",
+   "id": "daed12cb",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0855ca98",
+   "id": "1a735e21",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10154013",
+   "id": "ea726c45",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   }
  ],
  "metadata": {
-  "date": 1705991366.519058,
+  "date": 1706480858.8416266,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
