--- a/_notebooks/zreferences.ipynb
+++ b/_notebooks/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70cf9e5a",
+   "id": "710b6cb6",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fafc868e",
+   "id": "fc8517ed",
    "metadata": {},
    "source": [
     "# References\n",
@@ -154,7 +154,7 @@
   }
  ],
  "metadata": {
-  "date": 1705991367.388073,
+  "date": 1706480859.6621003,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
