--- a/_notebooks/cass_koopmans_2.ipynb
+++ b/_notebooks/cass_koopmans_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "65419628",
+   "id": "137d2736",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f92ad699",
+   "id": "b1617899",
    "metadata": {},
    "source": [
     "# Cass-Koopmans Competitive Equilibrium"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d34e567",
+   "id": "4fc4f4ed",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55612a89",
+   "id": "58fdc7f1",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "240ededb",
+   "id": "12260dfe",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ee6a08d",
+   "id": "44563d0a",
    "metadata": {},
    "source": [
     "## Review of Cass-Koopmans Model\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a58a9e",
+   "id": "30106da7",
    "metadata": {},
    "source": [
     "### Planning Problem\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc58c7c2",
+   "id": "46e5794d",
    "metadata": {},
    "source": [
     "## Competitive Equilibrium\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34bdc681",
+   "id": "c5e424a0",
    "metadata": {},
    "source": [
     "## Market Structure\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "007a545b",
+   "id": "9985041a",
    "metadata": {},
    "source": [
     "### Prices\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea86a620",
+   "id": "f6b9c3a3",
    "metadata": {},
    "source": [
     "## Firm Problem\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e7d895",
+   "id": "ff5f53be",
    "metadata": {},
    "source": [
     "### Zero Profit Conditions\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f9a539b",
+   "id": "d924dc7a",
    "metadata": {},
    "source": [
     "## Household Problem\n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d9c0273",
+   "id": "f38f31cb",
    "metadata": {},
    "source": [
     "### Definitions\n",
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc756202",
+   "id": "cc3a8a7b",
    "metadata": {},
    "source": [
     "## Computing a Competitive Equilibrium\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8882ef1b",
+   "id": "a139f20b",
    "metadata": {},
    "source": [
     "### Guess for Price System\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f28b1d73",
+   "id": "6db5410a",
    "metadata": {},
    "source": [
     "### Verification Procedure\n",
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27afca83",
+   "id": "f38e251c",
    "metadata": {},
    "source": [
     "### Household’s Lagrangian\n",
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d5b4ef",
+   "id": "2d101824",
    "metadata": {},
    "source": [
     "### Representative Firm’s Problem\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5d7eb88",
+   "id": "5d8de5c4",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec9f7a02",
+   "id": "759ef909",
    "metadata": {
     "hide-output": false
    },
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0b610dd",
+   "id": "349330d1",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b25d4448",
+   "id": "71fef603",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66aad762",
+   "id": "8514a3b7",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ae1112",
+   "id": "38d7fec8",
    "metadata": {},
    "source": [
     "The above code from this lecture [Cass-Koopmans Planning Model](https://eqm.quantecon.org/cass_koopmans_1.html) lets us compute an optimal allocation for the planning problem.\n",
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01fc3ba",
+   "id": "986a42c2",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b466d1",
+   "id": "e31013ee",
    "metadata": {},
    "source": [
     "Now we calculate and plot for each $ T $"
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f284b60d",
+   "id": "4ed41d03",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05c0cfa0",
+   "id": "726897c8",
    "metadata": {},
    "source": [
     "#### Varying Curvature\n",
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ccda7c5",
+   "id": "90f92a79",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffebbd32",
+   "id": "033253f1",
    "metadata": {},
    "source": [
     "Adjusting $ \\gamma $ means adjusting how much individuals prefer\n",
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52695deb",
+   "id": "4841019c",
    "metadata": {},
    "source": [
     "## Yield Curves and Hicks-Arrow Prices\n",
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f2fb97c",
+   "id": "1a62d974",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebce7b7b",
+   "id": "c2f9131e",
    "metadata": {
     "hide-output": false
    },
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43fc3fa",
+   "id": "8ca16b75",
    "metadata": {},
    "source": [
     "Now we plot when $ t_0=20 $"
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c5bf52",
+   "id": "a12adf76",
    "metadata": {
     "hide-output": false
    },
@@ -1232,7 +1232,7 @@
   }
  ],
  "metadata": {
-  "date": 1705991366.5990143,
+  "date": 1706480858.919834,
   "filename": "cass_koopmans_2.md",
   "kernelspec": {
    "display_name": "Python",
