--- a/_notebooks/knowing_forecasts_of_others.ipynb
+++ b/_notebooks/knowing_forecasts_of_others.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "43b9244e",
+   "id": "d9c55526",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85e84ec9",
+   "id": "d06f7e3d",
    "metadata": {},
    "source": [
     "# Knowing the Forecasts of Others"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c4da03d",
+   "id": "85cccaa5",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ae15e65",
+   "id": "4d293cb5",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f0724a",
+   "id": "5a66b213",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a9fe1b",
+   "id": "af993adc",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41595d62",
+   "id": "9a81559e",
    "metadata": {},
    "source": [
     "### A Sequence of Models\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3265091",
+   "id": "407d8410",
    "metadata": {},
    "source": [
     "## The Setting\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0dda4cd",
+   "id": "7b17b76b",
    "metadata": {},
    "source": [
     "## Tactics\n",
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ffa5ad",
+   "id": "51f62755",
    "metadata": {},
    "source": [
     "## Equilibrium Conditions\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b111fce",
+   "id": "3c254123",
    "metadata": {},
    "source": [
     "### Equilibrium under perfect foresight\n",
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "165599d1",
+   "id": "75446cb1",
    "metadata": {},
    "source": [
     "## Equilibrium with $ \\theta_t $ stochastic but observed at $ t $\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d11d4c06",
+   "id": "5e22ca5f",
    "metadata": {},
    "source": [
     "### Filtering"
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02d73fca",
+   "id": "d20e9ef0",
    "metadata": {},
    "source": [
     "#### One noisy signal\n",
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05f44c63",
+   "id": "3a44d0e7",
    "metadata": {},
    "source": [
     "#### State-reconstruction error\n",
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e79e6b3",
+   "id": "9f789856",
    "metadata": {},
    "source": [
     "### A new state variable\n",
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f033d124",
+   "id": "b5375f33",
    "metadata": {},
    "source": [
     "### Two Noisy Signals\n",
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e354651",
+   "id": "c213c928",
    "metadata": {},
    "source": [
     "## Guess-and-Verify Tactic\n",
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3661d08f",
+   "id": "9c1ee44d",
    "metadata": {},
    "source": [
     "## Equilibrium with One Noisy Signal on $ \\theta_t $"
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf42ebd",
+   "id": "e54a8605",
    "metadata": {},
    "source": [
     "### Step 1: Solve for $ \\tilde{\\lambda} $ and $ \\lambda $\n",
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ace6bfcd",
+   "id": "d1d59907",
    "metadata": {},
    "source": [
     "### Step 2: Solve for $ p $\n",
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8870d482",
+   "id": "6728aaf5",
    "metadata": {},
    "source": [
     "### Step 3: Represent the system using `quantecon.LinearStateSpace`\n",
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c53e796c",
+   "id": "ce42b596",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65def76c",
+   "id": "ee2d4c17",
    "metadata": {
     "hide-output": false
    },
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b3125fa",
+   "id": "7d17bfa0",
    "metadata": {
     "hide-output": false
    },
@@ -1105,7 +1105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0edef573",
+   "id": "9c7516ee",
    "metadata": {
     "hide-output": false
    },
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e14a105",
+   "id": "2b6d59b0",
    "metadata": {
     "hide-output": false
    },
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b9e393b",
+   "id": "a117a704",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af4c5f4",
+   "id": "934a208e",
    "metadata": {
     "hide-output": false
    },
@@ -1185,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f89c8d9",
+   "id": "3e1b9207",
    "metadata": {
     "hide-output": false
    },
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51aa9ce",
+   "id": "b5303050",
    "metadata": {
     "hide-output": false
    },
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7886aaf",
+   "id": "a41d58a8",
    "metadata": {
     "hide-output": false
    },
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecace23f",
+   "id": "aa2d1f07",
    "metadata": {},
    "source": [
     "### Step 4: Compute impulse response functions\n",
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4d5d283",
+   "id": "390d7b4e",
    "metadata": {
     "hide-output": false
    },
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd18f03",
+   "id": "151a1dd5",
    "metadata": {},
    "source": [
     "### Step 5: Compute stationary covariance matrices and population regressions\n",
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c42ff2",
+   "id": "cd313890",
    "metadata": {
     "hide-output": false
    },
@@ -1318,7 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb47c95",
+   "id": "0757be94",
    "metadata": {
     "hide-output": false
    },
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e055ff0e",
+   "id": "1f6c67e9",
    "metadata": {
     "hide-output": false
    },
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4751d5d9",
+   "id": "e454b02f",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40162239",
+   "id": "93762011",
    "metadata": {
     "hide-output": false
    },
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95ae424c",
+   "id": "da49f908",
    "metadata": {},
    "source": [
     "## Equilibrium with Two Noisy Signals on $ \\theta_t $\n",
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99e9c674",
+   "id": "8fc3f8c8",
    "metadata": {
     "hide-output": false
    },
@@ -1497,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac141e2",
+   "id": "d6a9c5f5",
    "metadata": {
     "hide-output": false
    },
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99883435",
+   "id": "d6cf2ca6",
    "metadata": {
     "hide-output": false
    },
@@ -1551,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9388d52",
+   "id": "5f309360",
    "metadata": {
     "hide-output": false
    },
@@ -1565,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9cca7d3",
+   "id": "d8ac13de",
    "metadata": {
     "hide-output": false
    },
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83766581",
+   "id": "1190bac1",
    "metadata": {
     "hide-output": false
    },
@@ -1590,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b16d61e",
+   "id": "b9915d78",
    "metadata": {
     "hide-output": false
    },
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3d3f66d",
+   "id": "4c9b9ec9",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0622459b",
+   "id": "eb624c27",
    "metadata": {
     "hide-output": false
    },
@@ -1653,7 +1653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7fee9b7",
+   "id": "08111a55",
    "metadata": {
     "hide-output": false
    },
@@ -1668,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f32b586",
+   "id": "2ba5a943",
    "metadata": {
     "hide-output": false
    },
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336a388c",
+   "id": "49279635",
    "metadata": {
     "hide-output": false
    },
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e3c044",
+   "id": "76a2d1af",
    "metadata": {
     "hide-output": false
    },
@@ -1720,7 +1720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b0f997",
+   "id": "c777500b",
    "metadata": {},
    "source": [
     "## Key Step\n",
@@ -1738,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e254aa1a",
+   "id": "60ee22fb",
    "metadata": {
     "hide-output": false
    },
@@ -1757,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a225b14",
+   "id": "5f8221dc",
    "metadata": {
     "hide-output": false
    },
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cd3a688",
+   "id": "0c82f5f6",
    "metadata": {},
    "source": [
     "The $ R^2 $ in this regression equals $ 1 $.\n",
@@ -1781,7 +1781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8b483c1",
+   "id": "949a8c09",
    "metadata": {},
    "source": [
     "## An observed common shock benchmark\n",
@@ -1844,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dc02ddb",
+   "id": "6912f868",
    "metadata": {
     "hide-output": false
    },
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf11ef01",
+   "id": "0fbac494",
    "metadata": {
     "hide-output": false
    },
@@ -1874,7 +1874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee3a4137",
+   "id": "a424acde",
    "metadata": {},
    "source": [
     "Now let’s form and plot an  impulse response function of $ k_t^i $ to shocks $ v_t $ to $ \\theta_{t+1} $"
@@ -1883,7 +1883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c268a80c",
+   "id": "683dc2be",
    "metadata": {
     "hide-output": false
    },
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f0ceb0",
+   "id": "c7b9afc3",
    "metadata": {},
    "source": [
     "## Comparison of  All Signal Structures\n",
@@ -1920,7 +1920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86e9924",
+   "id": "6ad91513",
    "metadata": {
     "hide-output": false
    },
@@ -1944,7 +1944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371a84a6",
+   "id": "6ef4367b",
    "metadata": {},
    "source": [
     "The three panels in the graph above show that\n",
@@ -1971,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60c3dbc",
+   "id": "3b7a3ad4",
    "metadata": {
     "hide-output": false
    },
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5593c46b",
+   "id": "c42a4bb0",
    "metadata": {},
    "source": [
     "Kalman gains  for the two\n",
@@ -1994,7 +1994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39f93a2c",
+   "id": "02719f03",
    "metadata": {
     "hide-output": false
    },
@@ -2007,7 +2007,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b480994",
+   "id": "0670ac97",
    "metadata": {},
    "source": [
     "Another  lesson that comes from the preceding three-panel graph is that the presence of iid noise\n",
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33e0f4f3",
+   "id": "076ebbf7",
    "metadata": {},
    "source": [
     "## Notes on History of the Problem\n",
@@ -2076,7 +2076,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c96c6bee",
+   "id": "6f8173ee",
    "metadata": {},
    "source": [
     "### Further historical remarks\n",
@@ -2144,7 +2144,7 @@
   }
  ],
  "metadata": {
-  "date": 1705991366.8879418,
+  "date": 1706480859.195762,
   "filename": "knowing_forecasts_of_others.md",
   "kernelspec": {
    "display_name": "Python",
