--- a/_notebooks/re_with_feedback.ipynb
+++ b/_notebooks/re_with_feedback.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "273b7427",
+   "id": "d231a0dc",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f18b4e48",
+   "id": "e2e456eb",
    "metadata": {},
    "source": [
     "# Stability in Linear Rational Expectations Models\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "befe4510",
+   "id": "2a1ff131",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4004a31f",
+   "id": "0ce3d651",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture deploys the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02567051",
+   "id": "b294a2d0",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d66e1a04",
+   "id": "59073507",
    "metadata": {
     "hide-output": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73090301",
+   "id": "2d2b0490",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9a75d5d",
+   "id": "79dd25b7",
    "metadata": {},
    "source": [
     "## Linear Difference Equations\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5717fc4",
+   "id": "610920fe",
    "metadata": {},
    "source": [
     "### First Order\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f8c1380",
+   "id": "084f5b3d",
    "metadata": {},
    "source": [
     "### Second Order\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aae8843c",
+   "id": "9b3d14fc",
    "metadata": {},
    "source": [
     "## Illustration: Cagan’s Model\n",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b516a12f",
+   "id": "ad86859c",
    "metadata": {},
    "source": [
     "## Some Python Code\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e33a91a",
+   "id": "5d99710d",
    "metadata": {
     "hide-output": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1734a51b",
+   "id": "b6fcc451",
    "metadata": {},
    "source": [
     "The matrix $ A $ has one eigenvalue equal to unity.\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92ebf2c8",
+   "id": "b659f15d",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ac4122",
+   "id": "1ffb3067",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97734303",
+   "id": "e47f6174",
    "metadata": {},
    "source": [
     "Now let’s compute $ F $ in formulas [(12.12)](#equation-equation-4) and [(12.13)](#equation-equation-5)."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6211954e",
+   "id": "ec53c789",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293849c9",
+   "id": "a33f29db",
    "metadata": {},
    "source": [
     "Now let’s simulate paths of $ m_t $ and $ p_t $ starting from an\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed625428",
+   "id": "a06215b9",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0929676",
+   "id": "97ac9991",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdfd9b5f",
+   "id": "71e42774",
    "metadata": {},
    "source": [
     "In the above graph, why is the log of the price level always less than\n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4e16a06",
+   "id": "98c15a87",
    "metadata": {},
    "source": [
     "## Alternative Code\n",
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "befaa264",
+   "id": "32aa9e92",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a16f661e",
+   "id": "cccbf327",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfa63233",
+   "id": "4851c2c4",
    "metadata": {},
    "source": [
     "### Special Case\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3461f2ad",
+   "id": "6c7326ba",
    "metadata": {},
    "source": [
     "## Another Perspective\n",
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b56d3d",
+   "id": "d38f70f5",
    "metadata": {},
    "source": [
     "### Refining the Formula\n",
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82742c83",
+   "id": "ef6a2294",
    "metadata": {},
    "source": [
     "### Remarks about Feedback\n",
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af74d0fe",
+   "id": "708446b5",
    "metadata": {},
    "source": [
     "## Log money Supply Feeds Back on Log Price Level\n",
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "354df818",
+   "id": "42c81b97",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e598a6c",
+   "id": "b6c71a87",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52b4f91c",
+   "id": "99d77bc6",
    "metadata": {},
    "source": [
     "Notice that a negative $ \\delta $ will not imperil the stability of the matrix\n",
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d35f0953",
+   "id": "dbd1f46b",
    "metadata": {
     "hide-output": false
    },
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c78182aa",
+   "id": "98edb88f",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cbc3ef4",
+   "id": "98ff7608",
    "metadata": {},
    "source": [
     "A sufficiently small positive $ \\delta $ also causes no problem."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "423fc5dd",
+   "id": "7245259e",
    "metadata": {
     "hide-output": false
    },
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea209842",
+   "id": "9e89a7e4",
    "metadata": {},
    "source": [
     "But a large enough positive $ \\delta $ makes both eigenvalues of $ H $\n",
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45018b53",
+   "id": "5048a3b9",
    "metadata": {
     "hide-output": false
    },
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1cd1601",
+   "id": "b7592deb",
    "metadata": {},
    "source": [
     "We want to study systems in which one eigenvalue exceeds unity in\n",
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e1d68b",
+   "id": "b1b5eab0",
    "metadata": {
     "hide-output": false
    },
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b303f4de",
+   "id": "da52f906",
    "metadata": {},
    "source": [
     "Let’s plot how the solution $ p_0 $ changes as $ m_0 $\n",
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7de7dfab",
+   "id": "201bdb4f",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de9433f",
+   "id": "5c103250",
    "metadata": {},
    "source": [
     "To look at things from a different angle, we can fix the initial value $ m_0 $ and\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e71b3749",
+   "id": "828d4003",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d70e669",
+   "id": "aeb55c53",
    "metadata": {},
    "source": [
     "Notice that when $ \\delta $ is large enough, both eigenvalues exceed\n",
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec81ddc2",
+   "id": "1aa6ea73",
    "metadata": {
     "hide-output": false
    },
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a9a3175",
+   "id": "aa2401f5",
    "metadata": {},
    "source": [
     "## Big $ P $, Little $ p $ Interpretation\n",
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54133327",
+   "id": "d8674d19",
    "metadata": {
     "hide-output": false
    },
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "714700dd",
+   "id": "e699a462",
    "metadata": {
     "hide-output": false
    },
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda95b75",
+   "id": "8c55f9b8",
    "metadata": {
     "hide-output": false
    },
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dd14277",
+   "id": "a9ce07f3",
    "metadata": {},
    "source": [
     "Compare $ F^* $ with $ F_1 + F_2 F^* $"
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7417904a",
+   "id": "9423a152",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65567d49",
+   "id": "a9f85ccb",
    "metadata": {},
    "source": [
     "## Fun with SymPy\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13b8d5b8",
+   "id": "e6e5a9a4",
    "metadata": {
     "hide-output": false
    },
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e802a2c",
+   "id": "0f4b7150",
    "metadata": {
     "hide-output": false
    },
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18168e12",
+   "id": "2d0d13fc",
    "metadata": {
     "hide-output": false
    },
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132fe763",
+   "id": "569505c1",
    "metadata": {
     "hide-output": false
    },
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71609e3",
+   "id": "88d05ec6",
    "metadata": {
     "hide-output": false
    },
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e87f346",
+   "id": "465980d0",
    "metadata": {},
    "source": [
     "Now let’s compute $ H $ when  $ \\delta $ is zero."
@@ -1512,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e6ebe7",
+   "id": "a2cefeea",
    "metadata": {
     "hide-output": false
    },
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "284baf94",
+   "id": "2f89465d",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4eb1611",
+   "id": "c0af7c68",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476d01d9",
+   "id": "d8a84001",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20a8d51",
+   "id": "ed5785cc",
    "metadata": {},
    "source": [
     "Below we do induce SymPy to do the following fun things for us analytically:\n",
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc381b65",
+   "id": "0437cb36",
    "metadata": {
     "hide-output": false
    },
@@ -1599,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d59a49b6",
+   "id": "5613194c",
    "metadata": {
     "hide-output": false
    },
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4788c9be",
+   "id": "99d78015",
    "metadata": {},
    "source": [
     "$ Q^{-1} $"
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ac3c816",
+   "id": "0ce22c7f",
    "metadata": {
     "hide-output": false
    },
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99012e07",
+   "id": "e984bd57",
    "metadata": {},
    "source": [
     "$ Q_{21}Q_{11}^{-1} $"
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50380a5d",
+   "id": "c196f915",
    "metadata": {
     "hide-output": false
    },
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce4c07eb",
+   "id": "fa488422",
    "metadata": {},
    "source": [
     "$ −(Q^{22})^{−1}Q^{21} $"
@@ -1660,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431c440f",
+   "id": "069a3ef5",
    "metadata": {
     "hide-output": false
    },
@@ -1671,7 +1671,7 @@
   }
  ],
  "metadata": {
-  "date": 1705991367.186388,
+  "date": 1706480859.4760547,
   "filename": "re_with_feedback.md",
   "kernelspec": {
    "display_name": "Python",
