--- a/_notebooks/two_auctions.ipynb
+++ b/_notebooks/two_auctions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "20066e41",
+   "id": "43a68707",
    "metadata": {},
    "source": [
     "# First-Price and Second-Price Auctions\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1740e7bb",
+   "id": "5d750989",
    "metadata": {},
    "source": [
     "## First-Price Sealed-Bid Auction (FPSB)\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "470fc425",
+   "id": "39c60eae",
    "metadata": {},
    "source": [
     "### Characterization of FPSB Auction\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6699496",
+   "id": "69abb6a9",
    "metadata": {},
    "source": [
     "## Second-Price Sealed-Bid Auction (SPSB)\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "140ae689",
+   "id": "9ff6b666",
    "metadata": {},
    "source": [
     "## Characterization of SPSB Auction\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc30e011",
+   "id": "f76000c0",
    "metadata": {},
    "source": [
     "## Uniform Distribution of Private Values\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3906295",
+   "id": "9e473701",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a643fb06",
+   "id": "25c8a28e",
    "metadata": {},
    "source": [
     "## First price sealed bid auction\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae4561f",
+   "id": "bfe24dbe",
    "metadata": {},
    "source": [
     "## Second Price Sealed Bid Auction\n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42387adb",
+   "id": "8fc6b947",
    "metadata": {},
    "source": [
     "## Python Code"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4658c0f2",
+   "id": "7c8f1589",
    "metadata": {
     "hide-output": false
    },
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ab9a8c9",
+   "id": "236828d4",
    "metadata": {},
    "source": [
     "We repeat an auction with 5 bidders for 100,000 times.\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38fa1dd2",
+   "id": "3f53d4be",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9f192f",
+   "id": "be886bf1",
    "metadata": {},
    "source": [
     "We compute and sort bid price distributions   that emerge under both  FPSB and SPSB."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "751545b0",
+   "id": "a55236a5",
    "metadata": {
     "hide-output": false
    },
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d164d4aa",
+   "id": "6f2bfbbe",
    "metadata": {},
    "source": [
     "Let’s now plot the *winning* bids $ b_{(n)} $ (i.e. the payment) against valuations, $ v_{(n)} $ for both FPSB and SPSB.\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc7bde60",
+   "id": "a8d96294",
    "metadata": {
     "hide-output": false
    },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75367087",
+   "id": "ecb0c367",
    "metadata": {},
    "source": [
     "## Revenue Equivalence Theorem\n",
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffd79bad",
+   "id": "0c50537e",
    "metadata": {
     "hide-output": false
    },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22a3659",
+   "id": "11ab90e8",
    "metadata": {},
    "source": [
     "**Summary of FPSB and SPSB results with uniform distribution on $ [0,1] $**\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bdaf06b",
+   "id": "f1e63496",
    "metadata": {},
    "source": [
     "## Calculation of  Bid Price in FPSB\n",
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d950c28",
+   "id": "fd1c8792",
    "metadata": {
     "hide-output": false
    },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "229e5ef4",
+   "id": "c331393a",
    "metadata": {},
    "source": [
     "We can check the accuracy of our `evaluate_largest` method by comparing it with an analytical solution.\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea5fef9",
+   "id": "a47f30d5",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66464d4c",
+   "id": "28af8feb",
    "metadata": {},
    "source": [
     "## $ \\chi^2 $ Distribution\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b8fbf8b",
+   "id": "b312f9c0",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa8d8c28",
+   "id": "8103d84d",
    "metadata": {},
    "source": [
     "Now we’ll get Python to construct a bid price function"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69e4596e",
+   "id": "90bdf352",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23004d61",
+   "id": "d4993fea",
    "metadata": {
     "hide-output": false
    },
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb6247e",
+   "id": "b726497b",
    "metadata": {},
    "source": [
     "We check our bid price function by computing and visualizing the result."
@@ -621,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c628fc06",
+   "id": "c9a23fcf",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e06ef47d",
+   "id": "8a9fa9ab",
    "metadata": {},
    "source": [
     "Now we can use Python to compute the probability distribution of the price paid by the winning bidder"
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5399eea",
+   "id": "24946bc1",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5738ef1c",
+   "id": "15dc8340",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6c08b09",
+   "id": "337fb966",
    "metadata": {},
    "source": [
     "## 5 Code Summary\n",
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99cb54e0",
+   "id": "67028aa2",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4289fc2d",
+   "id": "45a86345",
    "metadata": {
     "hide-output": false
    },
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183c0360",
+   "id": "8621c3fa",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098d45a3",
+   "id": "84bd4597",
    "metadata": {
     "hide-output": false
    },
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a151ea6",
+   "id": "1255a2ae",
    "metadata": {
     "hide-output": false
    },
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f1dc287",
+   "id": "1d96ab83",
    "metadata": {},
    "source": [
     "## References\n",
@@ -883,7 +883,7 @@
   }
  ],
  "metadata": {
-  "date": 1705991367.2368526,
+  "date": 1706480859.52561,
   "filename": "two_auctions.md",
   "kernelspec": {
    "display_name": "Python",
